<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#F9F9F9"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/headerCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="4dp"
        app:cardCornerRadius="8dp"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:outlineAmbientShadowColor="@color/white"
            android:outlineSpotShadowColor="@color/white"
            android:padding="16dp">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_title"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#333333"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/coinCountLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/headerCard"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/onePesoImage"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/one_peso_coin"
                    android:contentDescription="@string/one_peso"
                    android:layout_marginEnd="8dp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/one_peso"
                        android:textSize="16sp"
                        android:textColor="#333333"/>
                    <TextView
                        android:id="@+id/onePesoCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero_pieces"
                        android:textSize="14sp"
                        android:textColor="#666666"/>
                    <TextView
                        android:id="@+id/onePesoTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/peso_zero"
                        android:textSize="14sp"
                        android:textColor="#666666"/>
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/fivePesoImage"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/five_peso_coin"
                    android:contentDescription="@string/five_peso"
                    android:layout_marginEnd="8dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/five_peso"
                        android:textSize="16sp"
                        android:textColor="#333333"/>
                    <TextView
                        android:id="@+id/fivePesoCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero_pieces"
                        android:textSize="14sp"
                        android:textColor="#666666"/>
                    <TextView
                        android:id="@+id/fivePesoTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/peso_zero"
                        android:textSize="14sp"
                        android:textColor="#666666"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginBottom="8dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/tenPesoImage"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ten_peso_coin"
                    android:contentDescription="@string/ten_peso"
                    android:layout_marginEnd="8dp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ten_peso"
                        android:textSize="16sp"
                        android:textColor="#333333"/>
                    <TextView
                        android:id="@+id/tenPesoCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero_pieces"
                        android:textSize="14sp"
                        android:textColor="#666666"/>
                    <TextView
                        android:id="@+id/tenPesoTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/peso_zero"
                        android:textSize="14sp"
                        android:textColor="#666666"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/twentyPesoImage"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/twenty_peso_coin"
                    android:contentDescription="@string/twenty_peso"
                    android:layout_marginEnd="8dp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/twenty_peso"
                        android:textSize="16sp"
                        android:textColor="#333333"/>
                    <TextView
                        android:id="@+id/twentyPesoCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero_pieces"
                        android:textSize="14sp"
                        android:textColor="#666666"/>
                    <TextView
                        android:id="@+id/twentyPesoTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/peso_zero"
                        android:textSize="14sp"
                        android:textColor="#666666"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/resetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#4CAF50"
            android:padding="16dp"
            android:text="@string/reset_counts"
            android:textColor="#263238"
            android:textSize="18sp"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/totalCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/coinCountLayout"
        app:cardElevation="4dp"
        app:cardCornerRadius="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:id="@+id/totalRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="#333333"/>

            <TextView
                android:id="@+id/totalAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peso_zero"
                android:textColor="#43A047"
                android:textSize="28sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/historyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/view_log_history"
        android:textSize="18sp"
        android:backgroundTint="#9C27B0"
        android:textColor="#FFFFFF"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomButtonsLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp"
        tools:ignore="VisualLintButtonSize" />

    <LinearLayout
        android:id="@+id/bottomButtonsLayout"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:weightSum="3">

        <Button
            android:id="@+id/logoutButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FF6F00"
            android:padding="12dp"
            android:text="@string/logout1"
            android:textColor="#263238"
            android:textSize="16sp"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>